# edo-old

./: .gitignore  Makefile.in  config.in  configure.ac  edo.pc.in  edo_config.in
src/: BasicException.cpp  BasicException.hpp  Log.hpp  Parser.cpp  Parser.hpp  Path.hpp  Tag.hpp  common.h  edo_common.h
src/error/: BasicException.hpp  Log.cpp  Log.hpp
src/text/: Parser.cpp  Parser.hpp  Path.cpp  Path.hpp  Tag.cpp  Tag.hpp  Text.cpp  Text.hpp
test/: .gitignore  BasicException.cxx  Parser.cxx
test/error/: BasicException.cxx  Log.cxx
test/text/: Parser-1.xml  Parser.cxx  Path.cxx  Tag.cxx  Text.cxx
